force-app/main/default/objects/Maintenance_Alert__c/Maintenance_Alert__c.object-meta.xml
<CustomObject>
    <label>Maintenance Alert</label>
    <nameField>
        <label>Maintenance Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>