force-app/main/default/objects/Maintenance_Alert__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipName>Maintenance_Alerts</relationshipName>
</CustomField>