force-app/main/default/objects/Maintenance_Alert__c/fields/AI_Explanation__c.field-meta.xml
<CustomField>
    <fullName>AI_Explanation__c</fullName>
    <label>AI Explanation</label>
    <description>Field360 maintenance-alert field.</description>
    <type>LongTextArea</type>
    <length>4096</length><visibleLines>5</visibleLines>
</CustomField>