force-app/main/default/objects/Maintenance_Alert__c/fields/Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date__c</fullName>
    <label>Analysis Date</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Date</type>
</CustomField>