force-app/main/default/objects/Maintenance_Alert__c/fields/Days_Since_Last_Service__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Service__c</fullName>
    <label>Days Since Last Service</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Number</type>
    <precision>4</precision><scale>0</scale>
</CustomField>