force-app/main/default/objects/Maintenance_Alert__c/fields/Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Equipment_ID__c</fullName>
    <label>Equipment ID</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Text</type>
    <length>50</length>
</CustomField>