force-app/main/default/objects/Maintenance_Alert__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>