force-app/main/default/objects/Maintenance_Alert__c/fields/Jobs_In_Period__c.field-meta.xml
<CustomField>
    <fullName>Jobs_In_Period__c</fullName>
    <label>Jobs In Period</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Number</type>
    <precision>4</precision><scale>0</scale>
</CustomField>