force-app/main/default/objects/Maintenance_Alert__c/fields/Resulting_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Resulting_Work_Order__c</fullName>
    <label>Resulting Work Order</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Lookup</type>
    <referenceTo>Work_Order__c</referenceTo><relationshipName>Maintenance_Alerts</relationshipName>
</CustomField>