force-app/main/default/objects/Maintenance_Alert__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <label>Risk Score</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Number</type>
    <precision>3</precision><scale>0</scale>
</CustomField>