force-app/main/default/objects/Maintenance_Alert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Field360 maintenance-alert field.</description>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName
        >New</fullName><default>true</default></value><value><fullName
        >Reviewed</fullName></value><value><fullName
        >Work Order Created</fullName></value><value><fullName
        >Dismissed</fullName></value></valueSetDefinition></valueSet>
</CustomField>