force-app/main/default/objects/Maintenance_Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Equipment_ID__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Analysis_Date__c</columns>
    <columns>Jobs_In_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Maintenance Alerts</label>
</ListView>