force-app/main/default/objects/Maintenance_Alert__c/listViews/Critical_Alerts.listView-meta.xml
<ListView>
    <fullName>Critical_Alerts</fullName>
    <columns>NAME</columns>
    <columns>Equipment_ID__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>AI_Explanation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Risk_Score__c</field>
        <operation>greaterOrEqual</operation>
        <value>70</value>
    </filters>
    <label>Critical Alerts (High Risk)</label>
</ListView>